fixade olika färger på headern

--- a/databas/public/hem.html
+++ b/databas/public/hem.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="header"><img src=""></div>
+		<div id="header"><img src="./images/header.png"></div>
 		<div id="menu">
 			<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
 			<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
