--- a/databas/public/konton.html
+++ b/databas/public/konton.html
@@ -6,17 +6,15 @@
 	<title>Coop</title>
 </head>
 <body>
-	<div id="container">
-		<div id="header"><img src="./images/header5.png"></div>
-		<div id="menu">
-			<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
-			<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
-			<a href="kategorier.html"><img id="kat" src="./images/kategorier.png"></a>
-			<a href="lander.html"><img id="land" src="./images/lander.png"></a>
-			<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
-		</div>
-		
-	</div>	
-
+	<div id="header"><img src="./images/header5.png"></div>
+	<div id="menu">
+		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
+		<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
+		<a href="kategorier.html"><img id="kat" src="./images/kategorier.png"></a>
+		<a href="lander.html"><img id="land" src="./images/lander.png"></a>
+		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
+	</div>
+	<div id="val">
+</div>
 </body>
 </html>
