--- a/databas/public/hem.html
+++ b/databas/public/hem.html
@@ -6,7 +6,7 @@
 	<title>Coop</title>
 </head>
 <body>
-	<div id="header"><img src="./images/header.png"></div>
+	<div id="header"><img src="./images/header.png"><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
 	<div id="menu">
 		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
 		<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
@@ -52,7 +52,7 @@
 				step++
 				else
 				step=1
-				setTimeout("slideit()",20000)
+				setTimeout("slideit()",10000)
 				}
 				slideit()
 
