--- a/databas/public/konton.html
+++ b/databas/public/konton.html
@@ -6,7 +6,7 @@
 	<title>Coop</title>
 </head>
 <body>
-	<div id="header"><img src="./images/header5.png"></div>
+	<div id="header"><img src="./images/header5.png"><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
 	<div id="menu">
 		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
 		<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
@@ -15,6 +15,30 @@
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
 	<div id="val">
+		<button type="button" id="visa">Visa Konton</button>
+		<button type="button" id="skapa" onclick="showHide('skapa');return false;">Skapa Konto</button>
+	<div id="skapa">
+		<button type="button" id="konsult">Konsult Konto</button>
+		<button type="button" id="anstalld">Anställd Konto</button>
+		<button type="button" id="avbryt">Avbryt</button>
+	</div>
 </div>
+
+<script type="text/javascript">
+function showHide(shID) {
+	if (document.getElementById(shID)) {
+		if (document.getElementById(shID+'-show').style.display != 'none') {
+			document.getElementById(shID+'-show').style.display = 'none';
+			document.getElementById(shID).style.display = 'block';
+		}
+		else {
+			document.getElementById(shID+'-show').style.display = 'inline';
+			document.getElementById(shID).style.display = 'none';
+		}
+	}
+}
+</script>
+
+<!-- http://www.cssnewbie.com/showhide-content-css-javascript/ -->
 </body>
 </html>
