lagt till ny sida
blev sur på javascript, så la till en ny sida istället

--- a/databas/public/skapakonto.html
+++ b/databas/public/skapakonto.html
@@ -14,11 +14,11 @@
 		<a href="lander.html"><img id="land" src="./images/lander.png"></a>
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
-	<div id="val" class="ruta">
-		<button type="button" id="visa">Visa Konton</button>
-		<a href="./skapakonto.html"><button type="button" id="skapa">Skapa Konto</button></a>
-
-
-<!-- http://www.cssnewbie.com/showhide-content-css-javascript/ -->
+	<div id="skapakonto" class="ruta">
+		<button type="button" id="konsult">Konsult Konto</button>
+		<button type="button" id="anstalld">Anställd Konto</button>
+		<button type="button" id="avbryt">Avbryt</button>
+	</div>
+</div>
 </body>
 </html>
