--- a/databas/public/visakonton.html
+++ b/databas/public/visakonton.html
@@ -14,11 +14,8 @@
 		<a href="lander.html"><img id="land" src="./images/lander.png"></a>
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
-	<div id="val" class="ruta">
-		<a href="./visakonton.html"><button type="button" id="visa">Visa Konton</button></a>
-		<a href="./skapakonto.html"><button type="button" id="skapa">Skapa Konto</button></a>
-
-
-<!-- http://www.cssnewbie.com/showhide-content-css-javascript/ -->
+	<ul>
+<li>Oliver Mustafa</li>
+</ul>
 </body>
 </html>
