--- a/databas/public/skapakonto.html
+++ b/databas/public/skapakonto.html
@@ -17,7 +17,7 @@
 	<div id="skapakonto" class="ruta">
 		<button type="button" id="konsult">Konsult Konto</button>
 		<button type="button" id="anstalld">Anställd Konto</button>
-		<button type="button" id="avbryt">Avbryt</button>
+		<a href="./konton.html"><button type="button" id="avbryt">Avbryt</button></a>
 	</div>
 </div>
 </body>
