--- a/databas/public/konsult.html
+++ b/databas/public/konsult.html
@@ -15,8 +15,15 @@
 		<a href="lander.html"><img id="land" src="./images/lander.png"></a>
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
-	<ul>
-<li>Oliver Mustafa</li>
-</ul>
+	<div id="konsultkonto" class="ruta">
+	<input type="text" name="Användarnamn" placeholder="Användarnamn" id="username"></input>
+	<select id="behorighet">
+		Behörighet<option value="valj">välj leverantör</option>
+		<option value="oj">OJ</option>
+		<option value="barnproffset">Barnproffset</option>
+	</select>
+	<a href="./skapakonto.html"><button type="button" id="tillbaka">Tillbaka</button></a>
+	<a href="./hem.html"><button type="button" id="avbryter">Avbryt</button></a>
+</div>
 </body>
 </html>
