--- a/databas/public/konton.html
+++ b/databas/public/konton.html
@@ -3,7 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
-	<title>Coop</title>
+	<title>oop</title>
+	<link rel="shortcut icon" href="./images/title1.png" />
 </head>
 <body>
 	<div id="header"><img src="./images/header5.png"><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
