--- a/databas/public/skapakonto.html
+++ b/databas/public/skapakonto.html
@@ -3,7 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
-	<title>Coop</title>
+	<title>oop</title>
+	<link rel="shortcut icon" href="./images/title1.png" />
 </head>
 <body>
 	<div id="header"><img src="./images/header5.png"><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
@@ -15,10 +16,9 @@
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
 	<div id="skapakonto" class="ruta">
-		<button type="button" id="konsult">Konsult Konto</button>
+		<a href="./konsult.html"><button type="button" id="konsult">Konsult Konto</button></a>
 		<button type="button" id="anstalld">Anställd Konto</button>
 		<a href="./konton.html"><button type="button" id="avbryt">Avbryt</button></a>
-	</div>
 </div>
 </body>
 </html>
