--- a/databas/public/inloggning.html
+++ b/databas/public/inloggning.html
@@ -4,10 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
 	<title>oop</title>
-	<link rel="shortcut icon" href="./images/title1.png" />
+	<link rel="shortcut icon" href="./images/title1.png"/>
 </head>
 <body>
-	<div id="header"><img src=""><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
+	<div id="header"><img src=""><a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a></div>
 	<div id="menu">
 		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
 		<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
@@ -15,6 +15,6 @@
 		<a href="lander.html"><img id="land" src="./images/lander.png"></a>
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
-	
+	<p>hej</p>
 </body>
 </html>
