--- a/databas/public/konsult.html
+++ b/databas/public/konsult.html
@@ -4,10 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
 	<title>oop</title>
-	<link rel="shortcut icon" href="./images/title1.png" />
+	<link rel="shortcut icon" href="./images/title1.png"/>
 </head>
 <body>
-	<div id="header"><img src="./images/header5.png"><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
+	<div id="header"><img src="./images/header5.png"><a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a></div>
 	<div id="menu">
 		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
 		<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
@@ -16,14 +16,17 @@
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
 	<div id="konsultkonto" class="ruta">
-	<input type="text" name="Användarnamn" placeholder="Användarnamn" id="username"></input>
-	<select id="behorighet">
-		Behörighet<option value="valj">välj leverantör</option>
+	<h2><center>Konsult Konto</center></h2>
+	<input type="text" name="Användarnamn" placeholder="Användarnamn" id="username">
+	<div id="behorighet"><select>
+		<option value="valj">Välj leverantör</option>
 		<option value="oj">OJ</option>
 		<option value="barnproffset">Barnproffset</option>
-	</select>
-	<a href="./skapakonto.html"><button type="button" id="tillbaka">Tillbaka</button></a>
-	<a href="./hem.html"><button type="button" id="avbryter">Avbryt</button></a>
+	</select></div>
+	<a href="./skapakonto.html"><button type="button" class="tillbaka">Tillbaka</button></a>
+	<a href="./hem.html"><button type="button" class="avbryter">Avbryt</button></a>
+	<button type="button" id="add">+ Lägg till fler leverantörer</button>
+	<a href="./hem.html"><button type="button" class="spara" onclick="alert('Kontot är sparat')">Spara</button></a>
 </div>
 </body>
 </html>
