--- a/databas/public/skapakonto.html
+++ b/databas/public/skapakonto.html
@@ -4,10 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
 	<title>oop</title>
-	<link rel="shortcut icon" href="./images/title1.png" />
+	<link rel="shortcut icon" href="./images/title1.png"/>
 </head>
 <body>
-	<div id="header"><img src="./images/header5.png"><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
+	<div id="header"><img src="./images/header5.png"><a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a></div>
 	<div id="menu">
 		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
 		<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
@@ -17,7 +17,7 @@
 	</div>
 	<div id="skapakonto" class="ruta">
 		<a href="./konsult.html"><button type="button" id="konsult">Konsult Konto</button></a>
-		<button type="button" id="anstalld">Anställd Konto</button>
+		<a href="./anstalld.html"><button type="button" id="anstalld">Anställd Konto</button></a>
 		<a href="./konton.html"><button type="button" id="avbryt">Avbryt</button></a>
 </div>
 </body>
