inloggning och icon
titelbild och inloggningssida.

--- a/databas/public/newuser.html
+++ b/databas/public/newuser.html
@@ -10,9 +10,10 @@
 	
 	<div class="loggain">
 	<input type="text" name="Användarnamn" placeholder="Användarnamn" class="username">
-	<input type="text" name="Lösenord" placeholder="Lösenord" id="password">
-	<a href="./hem.html"><button type="button" class="login">Logga in</button></a>
-	<a href="./newuser.html"><button type="button" id="newuser">Ny användare</button></a>
+	<input type="text" name="Lösenord" placeholder="Välj lösenord" id="pickpassword">
+	<input type="text" name="Lösenord" placeholder="Upprepa lösenord" id="repeatpassword">
+	<a href="./hem.html"><button type="button" class="login">Logga in /Spara</button></a>
+	<a href="./inloggning.html"><button type="button" id="back">Tillbaka</button></a>
 
 </div>
 	
