--- a/databas/public/visakonton.html
+++ b/databas/public/visakonton.html
@@ -7,6 +7,11 @@
 	<link rel="shortcut icon" href="./images/title1.png"/>
 </head>
 <body>
+	
+
+
+
+
 	<div id="header"><img src="./images/header5.png"><a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a></div>
 	<div id="menu">
 		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
@@ -15,6 +20,12 @@
 		<a href="lander.html"><img id="land" src="./images/lander.png"></a>
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
-	<a href="./konton.html"><button type="button" class="tillbaka">Tillbaka</button></a>
+	<a href="./konton.html"><button type="button" id="tillbaka">Tillbaka</button></a>
+<ul>
+	<li>Oliver Mufasa, Ändrarbehörighet</li>
+	<li>Maryam Karlsson, Tittarbehörighet</li>
+	<li>Jannike Annorlunda, Konsult - Barnproffset  </li>
+</ul>
+	
 </body>
 </html>
