--- a/databas/public/newuser.html
+++ b/databas/public/newuser.html
@@ -12,7 +12,7 @@
 	<input type="text" name="Användarnamn" placeholder="Användarnamn" class="username">
 	<input type="text" name="Lösenord" placeholder="Välj lösenord" id="pickpassword">
 	<input type="text" name="Lösenord" placeholder="Upprepa lösenord" id="repeatpassword">
-	<a href="./hem.html"><button type="button" class="login">Logga in /Spara</button></a>
+	<a href="./hem.html"><button type="button" class="login" id="loggain" onclick="alert('Lösenordet är sparat)">Logga in /Spara</button></a>
 	<a href="./inloggning.html"><button type="button" id="back">Tillbaka</button></a>
 
 </div>
