--- a/databas/public/hem.html
+++ b/databas/public/hem.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="jquery.js"> </script>
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
 	<title>oop</title>
 	<link rel="shortcut icon" href="./images/title1.png"/>
+	<script>
+	$(document).ready(function(){
+		$('#oj').hide;
+		// $("#OJ").click(function(){
+		// 	$("#OJinfo").toggle();
+
+
+		
+	});
+
+</script>
+
+
+
 </head>
 <body>
 	
@@ -23,17 +38,17 @@
 	<div id="contain">
 	<div id="revisioner">
 		<h3>Missade revisioner</h3>
-		<p>OJ 21 januari 2013</p>
-		<p>Visar alla missade</p>
+		<p class="p">OJ 21 januari 2013</p>
+		<p class="p">Visar alla missade</p>
 
 		<h3>Planerade revisioner</h3>
-		<p>Barnproffset 27 februari 2013</p>
-		<p>Max Max 4 juni 2013</p>
-		<p>Olivers oliver 20 december 2015</p>
-		<p>Visar de 5 narmsta</p>
+		<p class="p">Barnproffset 27 februari 2013</p>
+		<p class="p">Max Max 4 juni 2013</p>
+		<p class="p">Olivers oliver 20 december 2015</p>
+		<p class="p">Visar de 5 narmsta</p>
 		<h3>Kommande revisioner</h3>
-		<p>Daniels Korvar 2013</p>
-		<p>Visar 3 kommande</p>
+		<p class="p">Daniels Korvar 2013</p>
+		<p class="p">Visar 3 kommande</p>
 	</div>
 	<div id="motton">
 		<script type="text/javascript">
