--- a/databas/public/kategorier.html
+++ b/databas/public/kategorier.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="jquery.js"> </script>
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
 	<title>oop</title>
 	<link rel="shortcut icon" href="./images/title1.png"/>
+	<script>
+	$(document).ready(function(){
+		$('#oj').hide;
+		// $("#OJ").click(function(){
+		// 	$("#OJinfo").toggle();
+
+
+		
+	});
+
+</script>
+
+
+
 </head>
 <body>
 	
@@ -20,50 +35,157 @@
 		<a href="lander.html"><img id="land" src="./images/lander.png"></a>
 		<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 	</div>
-	<table id="kategori" border="1" cellspacing="0" cellpadding="2">
-<tr>
-<td bgcolor="lightgrey">Kategori</td>
-<td bgcolor="lightgrey">Produktsäkerhet</td>
-<td bgcolor="lightgrey">Kvalitet</td>
-<td bgcolor="lightgrey">Miljö</td>
-<td bgcolor="lightgrey">CSR</td>
-<td bgcolor="lightgrey">Varumärkets risk</td>
-<td bgcolor="lightgrey">Ekonomisk risk</td>
-<td bgcolor="lightgrey">Riskpoäng produktsäkerhet per kategori</td>
-<td bgcolor="lightgrey">Riskpoäng Code of Conduct per kategori</td>
+	<button type="button" id="filt">Filtrera</button>
+<table id="kategori" border="1" cellspacing="0" cellpadding="2">
+<tr class="grey">
+	<td>Kategori</td>
+	<td>Produktsäkerhet</td>
+	<td>Kvalitet</td>
+	<td>Miljö</td>
+	<td>CSR</td>
+	<td>Varumärkets risk</td>
+	<td>Ekonomisk risk</td>
+	<td>Riskpoäng produktsäkerhet per kategori</td>
+	<td>Riskpoäng Code of Conduct per kategori</td>
 </tr>
 <tr>
-<td>Barnmat</td>
-<td>3</td>
-<td>3</td>
-<td>2</td>
-<td>3</td>
-<td>3</td>
-<td>3</td>
-<td>12</td>
-<td>11</td>
+	<td>Barnmat</td>
+	<td>3</td>
+	<td>3</td>
+	<td>2</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>11</td>
+</tr>
+<tr class="grey">
+	<td>Sär-när</td>
+	<td>3</td>
+	<td>3</td>
+	<td>2</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>11</td>
 </tr>
 <tr>
-<td bgcolor="lightgrey">Sär-när</td>
-<td bgcolor="lightgrey">3</td>
-<td bgcolor="lightgrey">3</td>
-<td bgcolor="lightgrey">2</td>
-<td bgcolor="lightgrey">3</td>
-<td bgcolor="lightgrey">3</td>
-<td bgcolor="lightgrey">3</td>
-<td bgcolor="lightgrey">12</td>
-<td bgcolor="lightgrey">11</td>
+	<td>Färskt kött</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>12</td>
+</tr>
+<tr class="grey">
+	<td>Sär-när</td>
+	<td>3</td>
+	<td>3</td>
+	<td>2</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>11</td>
 </tr>
 <tr>
-<td>Färskt kött</td>
-<td>3</td>
-<td>3</td>
-<td>3</td>
-<td>3</td>
-<td>3</td>
-<td>3</td>
-<td>12</td>
-<td>12</td>
+	<td>Färskt kött</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>12</td>
+</tr><tr class="grey">
+	<td>Sär-när</td>
+	<td>3</td>
+	<td>3</td>
+	<td>2</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>11</td>
+</tr>
+<tr>
+	<td>Färskt kött</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>12</td>
+</tr><tr class="grey">
+	<td>Sär-när</td>
+	<td>3</td>
+	<td>3</td>
+	<td>2</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>11</td>
+</tr>
+<tr>
+	<td>Färskt kött</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>12</td>
+</tr><tr class="grey">
+	<td>Sär-när</td>
+	<td>3</td>
+	<td>3</td>
+	<td>2</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>11</td>
+</tr>
+<tr>
+	<td>Färskt kött</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>12</td>
+</tr><tr class="grey">
+	<td>Sär-när</td>
+	<td>3</td>
+	<td>3</td>
+	<td>2</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>11</td>
+</tr>
+<tr>
+	<td>Färskt kött</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>3</td>
+	<td>12</td>
+	<td>12</td>
 </tr>
 </table>
 	
