--- a/databas/public/hem.html
+++ b/databas/public/hem.html
@@ -12,6 +12,7 @@
 
 
 	<div id="header"><img src="./images/header.png">
+		<p id="inloggadsom">Inloggad som: Maryam Mian</p>
 		<a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a>
 	</div>
 
@@ -24,16 +25,16 @@
 	</div>
 	<div id="contain">
 	<div id="revisioner">
-		<h3>Missade revisioner</h3>
+		<h3 id="miss">Missade revisioner</h3>
 		<p class="p">OJ 21 januari 2013</p>
-		<p class="p">Visar alla missade</p>
+		<p class="p" id="fakelink">Visa alla missade</p>
 
-		<h3>Planerade revisioner</h3>
+		<h3 id="plan">Planerade revisioner</h3>
 		<p class="p">Barnproffset 27 februari 2013</p>
 		<p class="p">Max Max 4 juni 2013</p>
 		<p class="p">Olivers oliver 20 december 2015</p>
 		<p class="p">Visar de 5 narmsta</p>
-		<h3>Kommande revisioner</h3>
+		<h3 id="kom">Kommande revisioner</h3>
 		<p class="p">Daniels Korvar 2013</p>
 		<p class="p">Visar 3 kommande</p>
 	</div>
