--- a/databas/public/kategorier.html
+++ b/databas/public/kategorier.html
@@ -12,6 +12,7 @@
 
 
 	<div id="header"><img src="./images/header3.png">
+		<p id="inloggadsom">Inloggad som: Maryam Mian</p>
 		<a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a>
 	</div>
 
