--- a/databas/public/konsult.html
+++ b/databas/public/konsult.html
@@ -12,6 +12,7 @@
 
 
 	<div id="header"><img src="./images/header5.png">
+		<p id="inloggadsom">Inloggad som: Maryam Mian</p>
 		<a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a>
 	</div>
 
@@ -27,8 +28,14 @@
 	<input type="text" name="Användarnamn" placeholder="Användarnamn" id="username">
 	<div id="behorighet"><select>
 		<option value="valj">Välj leverantör</option>
-		<option value="oj">OJ</option>
 		<option value="barnproffset">Barnproffset</option>
+		<option value="lillalila">Lilla lila</option>
+		<option value="mm">Maryams Måsar</option>
+		<option value="oj">OJ</option>
+		<option value="oliveroliver">Olivers oliver</option>
+		<option value="PK">Pelles kladdkaka</option>
+		<option value="ro">Rektorns Original</option>
+		<option value="om">Ödlemat</option>
 	</select></div>
 	<a href="./skapakonto.html"><button type="button" class="tillbaka">Tillbaka</button></a>
 	<a href="./hem.html"><button type="button" class="avbryter">Avbryt</button></a>
