--- a/databas/public/inloggning.html
+++ b/databas/public/inloggning.html
@@ -10,6 +10,7 @@
 <body>
 	
 	<div class="loggain">
+	<img src="./images/smallheader.png" class="smallheader">
 	<input type="text" name="Användarnamn" placeholder="Användarnamn" class="username">
 	<input type="text" name="Lösenord" placeholder="Lösenord" id="password">
 	<a href="./hem.html"><button type="button" class="login">Logga in</button></a>
