--- a/databas/public/leverantor.html
+++ b/databas/public/leverantor.html
@@ -12,6 +12,7 @@
 
 
 	<div id="header"><img src="./images/header2.png">
+		<p id="inloggadsom">Inloggad som: Maryam Mian</p>
 		<a href="./inloggning.html"><button type="button" id="logut">Logga ut</button></a>
 	</div>
 
@@ -24,7 +25,7 @@
 	</div>
 	<button type="button" id="filtleft">Filtrera</button>
 
-<div id="status"><img src="./images/status.png"></div>
+<div id="status"><img src="./images/status2.png"></div>
 
 <div>
  <script>
