--- a/databas/public/newuser.html
+++ b/databas/public/newuser.html
@@ -10,6 +10,7 @@
 <body>
 	
 	<div class="loggain">
+	<img src="./images/smallheader.png" class="smallheader">
 	<input type="text" name="Användarnamn" placeholder="Användarnamn" class="username">
 	<input type="text" name="Lösenord" placeholder="Välj lösenord" id="pickpassword">
 	<input type="text" name="Lösenord" placeholder="Upprepa lösenord" id="repeatpassword">
